--- a/src/g_re1/Makefile.am
+++ b/src/g_re1/Makefile.am
@@ -40,5 +40,5 @@ generated_files = rdt_scd_defs.gen.h rdt_scd_types.gen.h rdt_scd_dumps.gen.c \
 	rdt_scd_lengths.gen.c rdt_scd_enums.gen.c
 
 EXTRA_DIST = $(header_files) $(generated_files) \
-	libg_re1.vcproj $(SCD_XML)
+	libg_re1.vcproj xml_libg_re1.vcproj $(SCD_XML)
 	
