--- a/src/g_re2/Makefile.am
+++ b/src/g_re2/Makefile.am
@@ -43,4 +43,4 @@ generated_files = rdt_scd_defs.gen.h rdt_scd_types.gen.h \
 	rdt_scd_enums.gen.c
 
 EXTRA_DIST = $(header_files) $(generated_files) \
-	libg_re2.vcproj $(SCD_XML)
+	libg_re2.vcproj xml_libg_re2.vcproj $(SCD_XML)
