--- a/src/g_re1/Makefile.am
+++ b/src/g_re1/Makefile.am
@@ -2,7 +2,7 @@ noinst_LIBRARIES = libg_re1.a
 
 libg_re1_a_SOURCES = emd.c pak.c game_re1.c game_re1_pc.c \
 	game_re1_ps1.c rdt.c rdt_rvd.c rdt_rid.c rdt_pri.c rdt_scd.c \
-	rdt_scd_dump.c rdt_sca.c rdt_msg.c
+	rdt_scd_dump.c rdt_sca.c rdt_msg.c rdt_evt_dump.c
 
 AM_CFLAGS = $(SDL_CFLAGS)
 AM_CXXFLAGS = $(SDL_CFLAGS)
@@ -34,7 +34,7 @@ rdt_scd_enums.gen.c:	$(SCD_XML) $(XML2SCD)
 
 header_files = emd.h pak.h game_re1.h rdt.h rdt_rvd.h rdt_rid.h \
 	rdt_pri.h rdt_scd.h rdt_scd_dump.h \
-	rdt_sca.h rdt_msg.h rdt_evt.h
+	rdt_sca.h rdt_msg.h rdt_evt.h rdt_evt_dump.h
 
 generated_files = rdt_scd_defs.gen.h rdt_scd_types.gen.h rdt_scd_dumps.gen.c \
 	rdt_scd_lengths.gen.c rdt_scd_enums.gen.c
