--- a/configure.ac
+++ b/configure.ac
@@ -92,32 +92,46 @@ fi
 
 CHECK_ZLIB()
 
+# SDL2_image
+
+if test "x$HAVE_SDL2" = "xyes"; then
+	PKG_CHECK_MODULES([SDL2_IMAGE], [SDL2_image], [have_sdl2image=yes], [have_sdl2image=no])
+	if [[ "x$have_sdl2image" = "xyes" ]]; then
+		# Copy to SDL_image values
+		AC_DEFINE([HAVE_SDLIMAGE], 1, [Define if SDL_image enabled])
+		SDL_IMAGE_LIBS=$SDL2_IMAGE_LIBS
+		SDL_IMAGE_CFLAGS=$SDL2_IMAGE_CFLAGS
+	fi
+fi
+
 # SDL_image
 
-if test "x$PKG_CONFIG" != "x"; then
-	PKG_CHECK_MODULES([SDL_IMAGE], [SDL_image], [have_sdlimage=yes], [have_sdlimage=no])
-	if [[ "x$have_sdlimage" = "xyes" ]]; then
-		AC_DEFINE([HAVE_SDLIMAGE], 1, [Define if SDL_image enabled])
-	fi
-else
-	TMP_CFLAGS=$CFLAGS
-	TMP_CPPFLAGS=$CPPFLAGS
-	CFLAGS="$CFLAGS $SDL_CFLAGS"
-	CPPFLAGS="$CPPFLAGS $SDL_CFLAGS"
-	AC_CHECK_HEADER(SDL_image.h,
-		have_sdlimage_h=yes, havesdlimage_h=no)
-	AC_CHECK_LIB(SDL_image, IMG_isJPG,
-		have_sdlimage_lib=yes, have_sdlimage_lib=no,
-		$SDL_LIBS $SYS_SDLIMAGE_ADDLIBS)
-	if test "x$have_sdlimage_h" = "xyes" -a "x$have_sdlimage_lib" = "xyes"; then
-		SDL_IMAGE_LIBS="-lSDL_image $SYS_SDLIMAGE_ADDLIBS $ZLIB_LIBS -lm"
-		SDL_IMAGE_CFLAGS=""
-		AC_DEFINE(HAVE_SDLIMAGE, 1, [Define if you have SDL_image])
+if test "x$HAVE_SDL2" = "xno"; then
+	if test "x$PKG_CONFIG" != "x"; then
+		PKG_CHECK_MODULES([SDL_IMAGE], [SDL_image], [have_sdlimage=yes], [have_sdlimage=no])
+		if [[ "x$have_sdlimage" = "xyes" ]]; then
+			AC_DEFINE([HAVE_SDLIMAGE], 1, [Define if SDL_image enabled])
+		fi
 	else
-		AC_MSG_WARN([*** SDL_image not found!])
+		TMP_CFLAGS=$CFLAGS
+		TMP_CPPFLAGS=$CPPFLAGS
+		CFLAGS="$CFLAGS $SDL_CFLAGS"
+		CPPFLAGS="$CPPFLAGS $SDL_CFLAGS"
+		AC_CHECK_HEADER(SDL_image.h,
+			have_sdlimage_h=yes, havesdlimage_h=no)
+		AC_CHECK_LIB(SDL_image, IMG_isJPG,
+			have_sdlimage_lib=yes, have_sdlimage_lib=no,
+			$SDL_LIBS $SYS_SDLIMAGE_ADDLIBS)
+		if test "x$have_sdlimage_h" = "xyes" -a "x$have_sdlimage_lib" = "xyes"; then
+			SDL_IMAGE_LIBS="-lSDL_image $SYS_SDLIMAGE_ADDLIBS $ZLIB_LIBS -lm"
+			SDL_IMAGE_CFLAGS=""
+			AC_DEFINE(HAVE_SDLIMAGE, 1, [Define if you have SDL_image])
+		else
+			AC_MSG_WARN([*** SDL_image not found!])
+		fi
+		CFLAGS=$TMP_CFLAGS
+		CPPFLAGS=$TMP_CPPFLAGS
 	fi
-	CFLAGS=$TMP_CFLAGS
-	CPPFLAGS=$TMP_CPPFLAGS
 fi
 
 # physfs
