movie: move SDL2 backend in separate file

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,7 +16,7 @@ reevengi_SOURCES = background_bss.c background_tim.c clock.c \
 	filesystem.c idctfst.c log.c main.c \
 	parameters.c physfsrwops.c \
 	video.c video_opengl.c \
-	view_background.c view_movie.c
+	view_background.c view_movie.c view_movie_sdl2.c
 
 reevengi_headers = background_bss.h background_tim.h clock.h \
 	depack_mdec.h depack_vlc.h \
@@ -28,6 +28,6 @@ reevengi_headers = background_bss.h background_tim.h clock.h \
 reevengi_LDADD = g_re1/libg_re1.a g_re2/libg_re2.a g_re3/libg_re3.a \
 	g_common/libg_common.a \
 	r_opengl/libr_opengl.a r_soft/libr_soft.a \
-	r_common/libr_common.a 
+	r_common/libr_common.a
 
 EXTRA_DIST = $(reevengi_headers) reevengi.vcproj
