--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,8 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_PREREQ(2.59)
-AC_INIT(reevengi, 0.19, patmandin@gmail.com)
+AC_PREREQ([2.71])
+AC_INIT([reevengi],[0.19],[patmandin@gmail.com])
 AC_CONFIG_SRCDIR([src/main.c])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_AUX_DIR([autotools])
